# lia

./: CMakeLists.txt
demo/: main.cpp  tests.h
lia/: dynamic.h  lia.h  static.h
lia/dense/: dynamic.cpp  dynamic.h  static.h
tests/dense/: dynamic.cpp  static.cpp
tests/utt/: utt.cpp  utt.h
